--- a/bms-cockpit/DEBIAN/control.in
+++ b/bms-cockpit/DEBIAN/control.in
@@ -5,6 +5,5 @@ Priority: optional
 Architecture: all
 Depends: adduser, systemd, xserver-xorg, x11-xserver-utils, xinit, xserver-xorg-video-all
 Maintainer: Christian Gebauer <mail@christiangebauer.de>
-Description: BMS Cockpit daemon
- A tool to visualize Falcon BMS Cockpit instruments and displays on Raspberry Pi.
- 
+Description: BMS-Cockpit Meta-Package with minimal X-Server
+ A tool to visualize Falcon BMS Cockpit instruments and displays on Raspberry-Pis.
